added constants and utility package names