@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name> WebdriverTest </name>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -21,10 +21,29 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.18.1</version>
 				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+					
+					<systemPropertyVariables>
+						
+						<browser>${browser}</browser>
+						
+					</systemPropertyVariables>
+					
+					<forkCount>0</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<reportsDirectory>${basedir}/test-output</reportsDirectory>
+					<outputDirectory>${basedir}/Reports</outputDirectory>
+					<outputName>TestRun-Reports-At-${maven.build.timestamp}</outputName>
+					<property>
+						<name>SuiteName</name>
+						<value>${SuiteName}</value>
+						<echo>the suite file name is ${SuiteName} </echo>
+					</property>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>${SuiteName}</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
